# Eth_Mev_Backtesting

./: .gitignore  AGENTS.md  ARBITRAGE_COMPLETE_GUIDE.md  BLOCK_FETCHER_PLAN.md  Cargo.toml  EVM_FORK_PLAN.md  EXPERT_AUDIT_FIXES.md  MEMPOOL_PARSER_PLAN.md  README.md  index.html  mev-dashboard-40349916492db151.js  mev-dashboard-40349916492db151_bg.wasm  mev-dashboard-eb37d2e80eec8d92.js  mev-dashboard-eb37d2e80eec8d92_bg.wasm  run_pipeline.sh  spec.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dashboard.yml
crates/mev-analysis/: Cargo.toml
crates/mev-analysis/src/: classify.rs  lib.rs  pnl.rs  scc_detector.rs  transfer_graph.rs
crates/mev-cli/: Cargo.toml
crates/mev-cli/src/: main.rs
crates/mev-dashboard/: Cargo.toml  README.md  index.html  style.css
crates/mev-dashboard/src/: analysis.rs  main.rs  rpc.rs  types.rs
crates/mev-dashboard/src/components/: header.rs  mod.rs  results.rs  running.rs  setup.rs
crates/mev-data/: Cargo.toml
crates/mev-data/src/: blocks.rs  cex.rs  lib.rs  mempool.rs  store.rs  types.rs
crates/mev-sim/: Cargo.toml
crates/mev-sim/benches/: simulation_bench.rs
crates/mev-sim/src/: decoder.rs  evm.rs  lib.rs  ordering.rs
crates/mev-sim/src/strategies/: arbitrage.rs  cex_dex_arb.rs  dex_dex_intra.rs  mod.rs
crates/mev-sim/src/v3/: mod.rs  price.rs  slot0.rs
crates/mev-sim/tests/: v3_tests.rs  verify_fixtures.rs
data/: analysis_17m.csv  binance_ethusdc_17m.csv  compare.sql
docs/: INTRA_BLOCK_SCANNING.md  MATH.md  TESTING_WITH_ALCHEMY.md  VALIDATION.md  mev-concepts-glossary.md  tutorial-1-first-backtest.md  tutorial-2-arb-math.md
scripts/: arb_details.py  check_reserves.py  diagnostic_17m.py  diagnostic_17m_v2.py  diagnostic_17m_v3.py  find_arbs.py  find_arbs2.py  find_high_spread_blocks.py  find_spread.py  fine_scan_blocks.py  fixture_candidates.py  get_block_timestamps.py  get_full_hashes.py  get_hash_15539280.py  scan_cross_dex.py  scan_cross_dex_focused.py  scan_cross_dex_wider.py  scan_wider_blocks.py  spread_check.py  test_fetch_benchmark.sh  test_fetch_quick.sh  trace_sandwich.py  write_fixtures.py
sql/: validate_blocks.sql
test_data/: known_arb_txs.json
tests/: Cargo.toml  analysis.rs  arbitrage_correctness.rs  lib.rs  simulation.rs
tests/common/: mod.rs
tests/fixtures/: block_18000000.json  known_arb_tx.json
