[workspace]
members = [
  "crates/mev-data",
  "crates/mev-sim",
  "crates/mev-analysis",
  "crates/mev-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
alloy = "0.12"
revm = "19"
arrow = "53"
parquet = "53"
rusqlite = "0.32"
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
clap = "4"
serde = "=1.0.217"
serde_json = "1"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
chrono = "0.4"
comfy-table = "7"
indicatif = "0.17"
criterion = "0.5"
dashmap = "6"
