[package]
name = "mev-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
revm.workspace = true
arrow.workspace = true
parquet.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
eyre.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest.workspace = true
chrono.workspace = true
comfy-table.workspace = true
indicatif.workspace = true
criterion.workspace = true
dashmap.workspace = true
mev-data = { path = "../mev-data" }
mev-sim = { path = "../mev-sim" }
mev-analysis = { path = "../mev-analysis" }
