[package]
name = "mev-dashboard"
version = "0.1.0"
edition = "2021"
description = "WASM dashboard for the MEV Backtest Toolkit — deployable to GitHub Pages"

# This crate targets wasm32-unknown-unknown and is NOT part of the main workspace.
# Build with: trunk build --release
# Serve locally: trunk serve

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "console",
] }
js-sys = "0.3"
