[package]
name = "mev-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mev-data = { path = "../mev-data" }
alloy.workspace = true
revm.workspace = true
arrow.workspace = true
parquet.workspace = true
rusqlite.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
comfy-table.workspace = true
indicatif.workspace = true
criterion.workspace = true
dashmap.workspace = true
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mev-analysis = { path = "../mev-analysis" }

[[bench]]
name = "simulation_bench"
harness = false